--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,4 @@
-$primary: #2c3e50;
-$secondary: #42b983;
-@import 'node_modules/bootstrap/scss/bootstrap.scss';
-@import 'node_modules/bootstrap-vue/src/index.scss';
+$primary: #383535;
+$secondary: #383535;
+@import "node_modules/bootstrap/scss/bootstrap.scss";
+@import "node_modules/bootstrap-vue/src/index.scss";
